v0.1/fr/01_Documents_Obligatoires/CTX-QUA-001_Contexte_Organisation.md
# Contexte de l'Organisation

| | |
|---|---|
| **Reference** | CTX-QUA-001 |
| **Version** | 1.0 |
| **Date de creation** | 10/02/2026 |
| **Date de revision** | 10/02/2026 |
| **Redige par** | Roxane Wicky |
| **Approuve par** | Roxane Wicky |

---

## 1. Presentation de l'entreprise

### Description generale

Plus Sarl est une entreprise suisse fondee en 2007, dont le siege social se situe Route de Montet 11, 1588 Cudrefin, Suisse. La societe, constituee sous forme de Sarl, compte 1 employee (la gerante) et 3 associes : Roxane Wicky, Olav Wicky et Capucine Wicky.

L'activite principale de Plus Sarl est la coordination industrielle entre des clients europeens et des fabricants chinois, specialisee dans le developpement de moules pour l'injection de pieces plastiques et la fabrication de pieces. L'entreprise assure le lien entre les besoins de ses clients europeens et la capacite de production de ses partenaires en Chine.

Plus Sarl travaille avec deux partenaires chinois de fabrication :
- **Yuyao Mould Factory** : partenaire principal et historique
- **[A CONFIRMER - nom du second partenaire]** : second partenaire de production

### Outils et logiciels

| Outil | Usage |
|---|---|
| FileMaker | Gestion des donnees, suivi des projets et commandes |
| Email | Communication avec les clients et partenaires |
| WeChat | Communication avec les partenaires chinois |
| Telephone | Communication directe clients et partenaires |

### Chaine de valeur

```
Client europeen --> Plus Sarl --> Partenaires chinois --> Plus Sarl --> Client europeen
(besoin,            (coordination,  (fabrication          (controle,    (livraison)
 specification)      suivi,          moules et             suivi
                     controle)       pieces)               qualite)
```

---

## 2. Analyse du contexte (SWOT)

### Enjeux externes (section 4.1 du contexte)

- Dependance envers les partenaires industriels chinois pour l'outillage et la production
- Delais de transport international et contraintes logistiques
- Exigences douanieres et reglementaires pour l'import/export
- Variations des couts de production, de transport et des prix des matieres premieres
- Attentes elevees des clients en matiere de qualite, conformite technique et respect des delais

### Enjeux internes (section 4.1 du contexte)

- Organisation unipersonnelle necessitant une forte gestion des priorites et de la planification
- Besoin d'une communication fluide et continue avec les clients, fournisseurs et partenaires logistiques
- Maintien d'un haut niveau de maitrise documentaire, technique et organisationnelle
- Capacite a garantir reactivite, confidentialite et satisfaction client durable

### Matrice SWOT

#### Enjeux internes

| Forces (S) | Faiblesses (W) |
|---|---|
| Expertise technique en developpement de moules d'injection | Organisation unipersonnelle : ressources humaines limitees (1 personne) |
| Flexibilite et reactivite (micro-entreprise) | Dependance a deux partenaires de fabrication chinois |
| Relation de confiance historique avec Yuyao Mould Factory (depuis 2007) | Eloignement geographique de la production |
| Connaissance approfondie du marche europeen et des besoins clients | Pas de capacite de production propre |
| Couts de production competitifs grace aux partenaires chinois | Vulnerabilite en cas d'absence ou d'indisponibilite de la gerante |
| Haut niveau de maitrise documentaire, technique et organisationnelle | Forte exigence de gestion des priorites et de planification |
| Capacite de communication fluide et continue (multilangue, multicanal) | [A CONFIRMER] |

#### Enjeux externes

| Opportunites (O) | Menaces (T) |
|---|---|
| Optimisation des delais de livraison | Defaillance ou indisponibilite d'un partenaire/fournisseur chinois |
| Renforcement de la qualite de production | Retards significatifs de transport international |
| Amelioration continue de la satisfaction client | Defauts qualite majeurs sur des produits deja fabriques |
| Certification ISO 9001 = acces a de nouveaux marches et renforcement de la confiance | Perte d'un client important |
| Diversification possible des fournisseurs en Asie (second partenaire deja en place) | Variations des couts de production, transport et matieres premieres |
| [A CONFIRMER] | Risques lies aux formalites douanieres (niveau considere comme maitrisable) |

---

## 3. Parties interessees

| Partie interessee | Exigences / Attentes | Surveillance |
|---|---|---|
| **Clients europeens** | Produits conformes, respect des delais, communication reactive, protection de la confidentialite et de la propriete intellectuelle | Suivi des commandes, enquetes de satisfaction, traitement des reclamations |
| **Partenaires de fabrication chinois** (Yuyao Mould Factory + second partenaire) | Developpement d'outillage, fabrication de moules, production de pieces. Doivent respecter les exigences techniques, la qualite et les delais | Evaluation fournisseur annuelle, suivi de production, communication reguliere |
| **Transporteurs et prestataires logistiques internationaux** | Transport des marchandises Chine-Europe. Delais, integrite des produits et conformite documentaire sont critiques | Suivi des expeditions, evaluation de la fiabilite, performance de livraison |
| **Services douaniers** | Conformite reglementaire en matiere d'import/export | Suivi des documents douaniers, veille reglementaire |
| **Fiduciaire et prestataire comptable** | Conformite administrative, comptable et fiscale | Suivi des obligations legales, bilans periodiques |
| **Associes** (Roxane, Olav, Capucine Wicky) | Rentabilite, perennite de l'entreprise | Resultats financiers, revue de direction |
| **Organisme de certification** | Conformite a ISO 9001:2015 | Audits, revues de direction |
| [A CONFIRMER - autres parties interessees eventuelles] | [A CONFIRMER] | [A CONFIRMER] |

---

## 4. Organigramme fonctionnel

### Fonctions assumees par la gerante

```
                        Gerante / Directrice
                         Roxane Wicky
                              |
        +----------+----------+----------+----------+----------+
        |          |          |          |          |          |
   Responsable  Responsable  Achats /  Coordination  Responsable
    Qualite     Commercial   Sous-      Technique    Administratif
                             traitance
```

> **Note** : Toutes les fonctions operationnelles et de direction sont assumees
> par Roxane Wicky, gerante unique de Plus Sarl.

### Matrice des responsabilites

| Fonction | Responsabilite principale | Assumee par |
|---|---|---|
| Direction | Strategie, politique qualite, revue de direction | Roxane Wicky (Gerante) |
| Responsable qualite | SMQ, amelioration continue, suivi des indicateurs | Roxane Wicky (Gerante) |
| Commercial / Vente | Relation clients europeens, offres, commandes | Roxane Wicky (Gerante) |
| Achats / Sous-traitance | Relation partenaires chinois, commandes, suivi production | Roxane Wicky (Gerante) |
| Coordination technique | Specifications moules, suivi technique, validation | Roxane Wicky (Gerante) |
| Administratif | Facturation, documents douaniers, correspondance | Roxane Wicky (Gerante) |
| Audit interne | Realisation de l'audit interne annuel | **Externe** (auditeur independant a mandater) |

> **Note importante** : L'audit interne ne peut pas etre realise par la gerante elle-meme
> car l'exigence d'independance de l'auditeur (ISO 9001:2015, clause 9.2) ne serait pas
> respectee dans une organisation unipersonnelle. Un auditeur externe independant doit
> etre mandate pour cette fonction.
>
> [A CONFIRMER - le PDF mentionne que la gerante fait l'audit elle-meme, ce qui pose un
> probleme d'independance. La solution recommandee est de mandater un auditeur externe.]

---

## 5. Analyse des risques et opportunites

### 5.1 Risques identifies (section 6.1)

#### Processus Commercial (relation client)

| # | Risque / Opportunite | Type | Probabilite | Impact | Niveau | Action prevue |
|---|---|---|---|---|---|---|
| R1 | Perte d'un client important | Risque | Faible | Eleve | **Moyen** | Maintenir un haut niveau de confiance et de service pour fideliser les clients ; diversification du portefeuille clients |
| O1 | Amelioration continue de la satisfaction client | Opportunite | Elevee | Eleve | **Eleve** | Suivi proactif, communication reactive, traitement rapide des demandes |
| O2 | Certification ISO 9001 = acces a de nouveaux marches | Opportunite | Elevee | Eleve | **Eleve** | Obtenir et maintenir la certification, communiquer aupres des prospects |

#### Processus Achats / Sous-traitance (partenaires chinois)

| # | Risque / Opportunite | Type | Probabilite | Impact | Niveau | Action prevue |
|---|---|---|---|---|---|---|
| R2 | Defaillance ou indisponibilite d'un partenaire/fournisseur chinois | Risque | Faible | Tres eleve | **Eleve** | Communication etroite avec les partenaires, suivi de production renforce ; disponibilite d'un second partenaire |
| R3 | Defauts qualite majeurs sur des produits deja fabriques | Risque | Moyenne | Eleve | **Eleve** | Traitement rapide des non-conformites, remplacement des pieces defectueuses, controles renforces pour les productions suivantes |
| O3 | Renforcement de la qualite de production | Opportunite | Elevee | Eleve | **Eleve** | Cahiers des charges precis, controles renforces, retour d'experience systematique |

#### Processus Logistique / Livraison

| # | Risque / Opportunite | Type | Probabilite | Impact | Niveau | Action prevue |
|---|---|---|---|---|---|---|
| R4 | Retards significatifs de transport international | Risque | Moyenne | Eleve | **Eleve** | Selection et reevaluation des transporteurs sur la base de leur fiabilite ; marges de securite dans les delais |
| R5 | Risques lies aux formalites douanieres | Risque | Faible | Moyen | **Faible** | Niveau considere comme maitrisable ; suivi rigoureux de la conformite documentaire |
| O4 | Optimisation des delais de livraison | Opportunite | Moyenne | Eleve | **Eleve** | Amelioration continue du suivi logistique, evaluation reguliere des transporteurs |

### 5.2 Synthese des actions de mitigation

| Risque | Actions cles |
|---|---|
| Defaillance partenaire chinois | Communication etroite, suivi de production renforce, second partenaire disponible |
| Retards de transport international | Selection et reevaluation des transporteurs sur la base de leur fiabilite |
| Defauts qualite majeurs | Traitement rapide des NC, remplacement des pieces defectueuses, controles renforces pour les productions suivantes |
| Perte d'un client important | Maintien d'un haut niveau de confiance et de service pour fideliser les clients |
| Formalites douanieres | Niveau considere comme maitrisable ; suivi documentaire rigoureux |

### 5.3 Grille d'evaluation

**Probabilite :** Faible (1) / Moyenne (2) / Elevee (3)

**Impact :** Faible (1) / Moyen (2) / Eleve (3) / Tres eleve (4)

**Niveau de risque = Probabilite x Impact**
- 1-2 : Faible (acceptable)
- 3-4 : Moyen (surveiller)
- 6+ : Eleve (actions requises)

---

## 6. Exigences legales et reglementaires applicables

| Domaine | Exigence | Reference | Surveillance |
|---|---|---|---|
| Commerce | Inscription au registre du commerce | RC Canton de Vaud [A CONFIRMER - verifier si Cudrefin est dans le canton de Fribourg] | Annuel |
| Douanes | Reglementation importation/exportation Chine-Suisse-Europe | Administration federale des douanes (AFD) | A chaque importation/exportation |
| Matieres plastiques | REACH (si exportation UE) | Reglement CE 1907/2006 | Par produit |
| Matieres plastiques | RoHS (si applicable) | Directive 2011/65/UE | Par produit |
| TVA | TVA suisse et TVA intracommunautaire (si applicable) | LTVA | Trimestriel |
| Comptabilite | Obligations comptables et fiscales (Sarl) | CO / LIFD | Annuel, via fiduciaire |
| Securite produits | Directive machines / securite generale des produits (si applicable) | [A CONFIRMER selon produits] | Par produit |
| [A CONFIRMER] | [A CONFIRMER - autres exigences specifiques au secteur] | [A CONFIRMER] | [A CONFIRMER] |

---

## 7. Informations complementaires

### Coordonnees de l'entreprise

| | |
|---|---|
| **Raison sociale** | Plus Sarl |
| **Adresse** | Route de Montet 11, 1588 Cudrefin, Suisse |
| **Gerante** | Roxane Wicky |
| **Forme juridique** | Sarl (Societe a responsabilite limitee) |
| **Annee de fondation** | 2007 |
| **Nombre d'employes** | 1 (la gerante) |
| **Associes** | Roxane Wicky, Olav Wicky, Capucine Wicky |

### Frequence de revue

Ce document doit etre revu au minimum **1 fois par an** lors de la revue de direction, ou a chaque changement significatif du contexte de l'organisation.

---

*Document redige conformement aux exigences de la norme ISO 9001:2015, clauses 4.1, 4.2, 4.3 et 6.1.*
